# pairlane

./: .gitignore  AGENTS.md  PLANS.md  README.ja.md  README.md  README.zh.md  package.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.agents/skills/pairlane/: SKILL.md
.agents/skills/pairlane/agents/: openai.yaml
.github/workflows/: cli-release.yml
cli/: Cargo.toml
cli/npm/: package.json
cli/npm/scripts/: postinstall.js
cli/src/: main.rs
docs/: signaling-protocol.md
public/: app.js  style.css
src/: index.ts  index.tsx  room.ts
src/client/: home.tsx  room.tsx
src/client/components/: Footer.tsx
src/i18n/: client.ts  index.ts
src/locales/: en.json  ja.json  zh.json
src/ui/: layout.tsx  room.tsx  top.tsx
