[package]
name = "pairlane-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pairlane"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
getrandom = "0.2"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
webrtc = "0.9"
